<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <TextView android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_continue"
            android:layout_marginStart="@dimen/_16sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <EditText android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/email_id"
            android:background="@drawable/round_border"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            />

        <EditText android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/password"
            android:background="@drawable/round_border"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            />

        <TextView android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:cornerRadius="@dimen/_8sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvSignup"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="?colorPrimary"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvNewUser" />


</androidx.constraintlayout.widget.ConstraintLayout>